--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
 cron "30 0-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/qmyd.js, enabled=true, tag=全民悦动
@@ -24,7 +25,6 @@ cron "*/20 8-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Ta
 cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=摇一摇
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, enabled=true, tag=公众号监控
 cron "3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_nzmh.js, enabled=true, tag=女装盲盒
-cron "12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/rxm.js, enabled=true, tag=任性猫
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, enabled=true, tag=酷乐潮玩App
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, enabled=true, tag=聚看点
 cron "0 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/sqxs.js, enabled=true, tag=书旗小说
