--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,8 +1,10 @@
 # 公众号少年歌行pro全网合一整理
-# 感谢所有脚本作者，目前脚本总数：312个
+# 感谢所有脚本作者，目前脚本总数：314个
 
-cron "30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=自选股长牛来了（看脚本手动加cookie订阅）
+cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评友圈
 cron "16 30 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
+cron "30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=自选股长牛来了（看脚本手动加cookie订阅）
 cron "22 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/flw.js, enabled=true, tag=返利网
 cron "30 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/yuedongzu.js, enabled=true, tag=悦动族（查看阅读说明）
 cron "30 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/qmyd.js, enabled=true, tag=全民悦动(查看脚本下载)
