--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,8 @@
 # 公众号少年歌行pro全网合一整理
-# 感谢所有脚本作者，目前脚本总数：314个
+# 感谢所有脚本作者，目前脚本总数：315个
 
+cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js, enabled=true, tag=京东国际-环球挑战赛
+cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评友圈
 cron "16 30 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
@@ -95,7 +97,6 @@ cron "20 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js, enabled=true, tag=进店领豆
 cron "16 22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js, enabled=true, tag=东东小窝
 cron "8 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js, enabled=true, tag=京东天天加速
-cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "0 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js, enabled=true, tag=京东极速版
 cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js, enabled=true, tag=东东超市
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, enabled=true, tag=赚京豆
