--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,8 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
+cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_global.js, enabled=true, tag=环球挑战赛
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
@@ -46,6 +48,7 @@ cron "45 10-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/mai
 cron "30 10-20 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/ranlv.js, enabled=true, tag=燃旅视频
 cron "15 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jqb.js, enabled=true, tag=金钱豹
 cron "15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, enabled=true, tag=陌嗨短视频
+cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "0 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_speed_sign.js, enabled=true, tag=京东极速版
 cron "18 * * 1-5" script-path=https://raw.githubusercontent.com/yichahucha/surge/master/clock_in.js, enabled=true, tag=钉钉打卡提醒
 cron "30 8 * * *" script-path=https://raw.githubusercontent.com/nzw9314/QuantumultX/master/yichahucha/cron_daily.js, enabled=true, tag=每日一句+蚂蚁森林收能量
