--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,6 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：315个
-# 更新时间：2021-03-09 15:59:08:
+# 更新时间：2021-03-09 18:04:00
 
 cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js, enabled=true, tag=京东国际-环球挑战赛
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
