--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,6 +1,6 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
-# 更新时间：2021-03-09 15:59:08:
+# 更新时间：2021-03-09 18:04:00
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
