--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,7 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：315个
-# 更新时间：2021-03-09 18:04:00
+# 更新时间：2021-03-09 21:00:01
 
+cron "30,31 20-23/1 9,12 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨临时活动
+cron "0 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/hotsoon_old.js, enabled=true, tag=火山小视频极速版
 cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_global.js, enabled=true, tag=京东国际-环球挑战赛
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
