--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,8 +1,9 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
-# 更新时间：2021-03-09 18:04:00
+# 更新时间：2021-03-09 21:00:02
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
 cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_global.js, enabled=true, tag=环球挑战赛
 cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxd.js, enabled=true, tag=京小兑
