--- a/.github/workflows/京东循环任务.yml
+++ b/.github/workflows/京东循环任务.yml
@@ -36,27 +36,22 @@ jobs:
           git checkout master
           npm install
 
-#      - name: '运行 【京东种豆得豆】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_plantBean.js
-#        env:
-#          PLANT_BEAN_SHARECODES: ${{ secrets.PLANT_BEAN_SHARECODES }}
-          
+      - name: '运行 【京东种豆得豆】'
+        run: |
+          cd ~/TaskAction
+          node jd_plantBean.js
 
-#      - name: '运行 【东东农场】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_fruit.js
-#        env:
-#          FRUITSHARECODES: ${{ secrets.FRUITSHARECODES }}
-          
-#      - name: '运行 【东东工厂】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_jdfactory.js
-#        env:
-#          DDFACTORY_SHARECODES: ${{ secrets.DDFACTORY_SHARECODES }}
+
+      - name: '运行 【东东农场】'
+        run: |
+          cd ~/TaskAction
+          node jd_fruit.js
+
+
+      - name: '运行 【东东工厂】'
+        run: |
+          cd ~/TaskAction
+          node jd_jdfactory.js
 
 
 #      - name: '运行 【京喜农场】'
@@ -68,42 +63,35 @@ jobs:
 #          JXNC_SHARECODES: ${{ secrets.JXNC_SHARECODES }}
 
 
-#      - name: '运行 【京喜工厂】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_dreamFactory.js
-#        env:
-#          JXNCTOKENS: ${{ secrets.JXNCTOKENS }}
-#          DREAM_FACTORY_SHARE_CODES: ${{ secrets.DREAM_FACTORY_SHARE_CODES }}
+      - name: '运行 【京喜工厂】'
+        run: |
+          cd ~/TaskAction
+          node jd_dreamFactory.js
 
 
-#      - name: '运行 【东东萌宠】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_pet.js
-#        env:
-#          PETSHARECODES: ${{ secrets.PETSHARECODES }}
+      - name: '运行 【东东萌宠】'
+        run: |
+          cd ~/TaskAction
+          node jd_pet.js
 
 
-#      - name: '运行 【东东超市】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_superMarket.js
-#        env:
-#          JOIN_PK_TEAM: ${{ secrets.JOIN_PK_TEAM }}
-          
+      - name: '运行 【东东超市】'
+        run: |
+          cd ~/TaskAction
+          node jd_superMarket.js
 
-#      - name: '运行 【口袋书店】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_bookshop.js
+
+      - name: '运行 【口袋书店】'
+        run: |
+          cd ~/TaskAction
+          node jd_bookshop.js
 
 
 
-#      - name: '运行 【宠汪汪积分兑换奖品】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_joy_reward.js
+      - name: '运行 【宠汪汪积分兑换奖品】'
+        run: |
+          cd ~/TaskAction
+          node jd_joy_reward.js
 
 
       - name: '运行 【宠汪汪偷好友积分与狗】'
@@ -115,22 +103,22 @@ jobs:
           JOY_FEED_COUNT: ${{ secrets.JOY_FEED_COUNT }}
           
 
-#      - name: '运行 【点点券】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_necklace.js
+      - name: '运行 【点点券】'
+        run: |
+          cd ~/TaskAction
+          node jd_necklace.js
 
 
-#      - name: '运行 【京东天天加速】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_speed.js
+      - name: '运行 【京东天天加速】'
+        run: |
+          cd ~/TaskAction
+          node jd_speed.js
 
 
-#      - name: '运行 【天天提鹅】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_daily_egg.js
+      - name: '运行 【天天提鹅】'
+        run: |
+          cd ~/TaskAction
+          node jd_daily_egg.js
 
 
       - name: '运行 【crazyJoy任务】'
@@ -141,10 +129,10 @@ jobs:
           JDJOY_APPLYJDBEAN: ${{ secrets.JDJOY_APPLYJDBEAN }}
           
 
-#      - name: '运行 【京东财富岛】'
-#        run: |
-#          cd ~/TaskAction
-#          node jd_cfd.js
+      - name: '运行 【京东财富岛】'
+        run: |
+          cd ~/TaskAction
+          node jd_cfd.js
 
 
       - name: '运行 【京东摇钱树】'
@@ -161,6 +149,16 @@ jobs:
           node jd_firecrackers.js
         env:
           FIRECRACKERS_NOTITY_BEAN: ${{ secrets.FIRECRACKERS_NOTITY_BEAN }}
+
+      - name: '运行 【环球挑战赛】'
+        run: |
+          cd ~/TaskAction
+          node jd_global.js
+
+      - name: '运行 【京东直播】'
+        run: |
+          cd ~/TaskAction
+          node jd_live.js
 
 
 #      - name: '运行 【美丽研究院】'
