--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,7 +1,8 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：315个
-# 更新时间：2021-03-11 09:00:02
+# 更新时间：2021-03-11 12:07:48
 
+cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
 cron "30,31 20-23/1 9,12 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨临时活动
