--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,9 +1,9 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
-# 更新时间：2021-03-11 12:07:48
+# 更新时间：2021-03-11 15:00:02
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
-cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
+cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
 cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=美的家电节
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
