--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,8 +1,8 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
-# 更新时间：2021-03-12 09:00:01
-
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron " 10 10 * * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/master/jd_xmf.js, enabled=true, tag=京东小魔方
+cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
 cron "15 10 26-31 2,3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=美的家电节
 cron "15 13 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/hldsp.js, enabled=true, tag=哈喽短视频
@@ -62,7 +62,7 @@ cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/DD-D1/Script/m
 cron "0 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/RUNSTEP/cash.js, enabled=true, tag=走路赚钱-提现专用
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/ZCY01/daily_scripts/main/jd/jd_priceProtect.js, enabled=true, tag=京东价格保护
 cron "55 20 */3 * * *" script-path=https://gitee.com/curtinlv/qx/raw/master/Script/zmsp.js, enabled=true, tag=芝嫲视频
-cron "10 10,11 * * 2-5" script-path=https://github.com/i-chenzhe/qx/raw/main/jd_entertainment.js, enabled=true, tag=百变
+cron "10 10,11 * * 2-5" script-path=https://github.com/i-chenzhe/qx/raw/main/jd_entertainment.js, enabled=true, tag=百变大咖秀
 cron "36 0 8,12,13,14,18,19,20,21,22,23 * * *" script-path=https://raw.githubusercontent.com/elecV2/QuantumultX-Tools/master/dianx/dxbox.js, enabled=true, tag=整点开宝箱
 cron "30 7-23 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/baidu_speed.js, enabled=true, tag=百度极速版
 cron "35 5 0 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/kuaishou.js, enabled=true, tag=快手极速版
