--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,5 +1,6 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：316个
+cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/mmjz.js, tag=喵喵记账
 cron "*/30 9-22 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, 
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
 cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/xyzd.js, enabled=true, tag=幸运赚点
