--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -1,6 +1,7 @@
 # 奇心脚本合集
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
 cron " 10 10 * * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/master/jd_xmf.js, enabled=true, tag=京东小魔方
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
@@ -35,7 +36,6 @@ cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/mai
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, enabled=true, tag=酷乐潮玩App
 cron "*/10 */2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jukan.js, enabled=true, tag=聚看点
-cron "0 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/sqxs.js, enabled=true, tag=书旗小说
 cron "0 8 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/TT.js, enabled=true, tag=TT语音签到
 cron "1 1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_redPacket.js, enabled=true, tag=京东全民开红包
 cron "0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_cfdtx.js, enabled=true, tag=京喜财富岛提现
