--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,6 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：316个
-cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, 
+cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说ziye版
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/mmjz.js, enabled=true, tag=喵喵记账
 cron "*/30 9-22 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, 
 cron "*/30 8-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/cfz.js, enabled=true, tag=春风转
@@ -12,7 +12,7 @@ cron "0 9 8-31 3 *" script-path=https://jdsharedresourcescdn.azureedge.net/jdres
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_redpocke.js, enabled=true, tag=京东极速版红包
 cron "30 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 7 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, 
-cron "16 30 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
+cron "30 16 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockqx.js, enabled=true, tag=自选股
 cron "3,30 0 * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/TXSTOCK/txstockcow.js, enabled=true, tag=自选股长牛来了（看脚本手动加cookie订阅）
 cron "0 10,16,22 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/flw.js, enabled=true, tag=返利网
 cron "0,30 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/yuedongzu.js, enabled=true, tag=悦动族（查看阅读说明）
