--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -2,7 +2,7 @@
 # 感谢所有脚本作者，目前脚本总数：316个
 
 cron "*/6 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqireadtime.js, enabled=true, tag=书旗小说姐姐刷时长
-cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=true, tag=书旗小说姐姐
+cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=true, tag=书旗小说姐姐版
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说ziye版
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Script/mmjz.js, enabled=true, tag=喵喵记账
 cron "*/30 9-22 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, 
