--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -136,8 +136,8 @@ cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/mas
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, enabled=true, tag=爱奇艺
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/KuaiKan-DailyBonus/KKMH.js, enabled=true, tag=快看漫画
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10000/10000.js, enabled=true, tag=中国电信
-cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10010/10010.js, enabled=true, tag=中国联通
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.js, enabled=true, tag=中国移动
+cron "15 0 * * *" script-path=https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/script/10010/unicom_checkin.js, enabled=true, tag=联通_签到与抽奖
 cron "10 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/10086/10086.fee.js, enabled=true, tag=10086查话费
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/acfun/acfun.js, enabled=true, tag=AcFun
 cron "1 0 * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/apktw/apktw.js, enabled=true, tag=APK.TW
