--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
 cron " 10 10 * * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/master/jd_xmf.js, enabled=true, tag=京东小魔方
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/fqxs.js, enabled=true, tag=番茄小说
