--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
-# 感谢所有脚本作者，目前脚本总数：316个
+# 感谢所有脚本作者，目前脚本总数：319个
 
+cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "*/6 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqireadtime.js, enabled=true, tag=书旗小说姐姐刷时长
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=true, tag=书旗小说姐姐版
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说ziye版
