--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：319个
 
+cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
+cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=京东美的家电节
+cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=京东众筹许愿池
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "*/6 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqireadtime.js, enabled=true, tag=书旗小说姐姐刷时长
 cron "*/4 * * * *" script-path=https://raw.githubusercontent.com/CenBoMin/GithubSync/main/SHUQI/shuqi.js, enabled=true, tag=书旗小说姐姐版
@@ -91,33 +94,33 @@ cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jdzz.js, enabled=true, tag=京东赚赚
 cron "15 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy.js, enabled=true, tag=京东宠汪汪
 cron "15 0-23/1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_feedPets.js, enabled=true, tag=京东宠汪汪喂食
-cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js, enabled=true, tag=宠汪汪积分兑换奖品
-cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, enabled=true, tag=宠汪汪邀请助力与赛跑助力
-cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js, enabled=true, tag=宠汪汪偷好友积分与狗粮
-cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, enabled=true, tag=京喜农场
+cron "0 0-16/8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_reward.js, enabled=true, tag=京东宠汪汪积分兑换奖品
+cron "15 10 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_run.js, enabled=true, tag=京东宠汪汪邀请助力与赛跑助力
+cron "10 0-21/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_joy_steal.js, enabled=true, tag=京东宠汪汪偷好友积分与狗粮
+cron "0 9,12,18 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_jxnc.js, enabled=true, tag=京东京喜农场
 cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_kd.js, enabled=true, tag=京东快递签到
 cron "3 0-23/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_moneyTree.js, enabled=true, tag=京东摇钱树
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_ms.js, enabled=true, tag=京东秒秒币
-cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js, enabled=true, tag=点点券
-cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js, enabled=true, tag=东东萌宠
+cron "10 0,20 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_necklace.js, enabled=true, tag=京东点点券
+cron "15 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pet.js, enabled=true, tag=京东东东萌宠
 cron "12 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_pigPet.js, enabled=true, tag=京东金融养猪猪
-cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js, enabled=true, tag=种豆得豆
+cron "1 7-21/2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_plantBean.js, enabled=true, tag=京东种豆得豆
 cron "0 2 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_price.js, enabled=true, tag=京东保价
 cron "1 1 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_redPacket.js, enabled=true, tag=京东全民开红包
-cron "20 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js, enabled=true, tag=闪购盲盒
-cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js, enabled=true, tag=进店领豆
-cron "16 22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js, enabled=true, tag=东东小窝
+cron "20 8 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_sgmh.js, enabled=true, tag=京东闪购盲盒
+cron "10 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_shop.js, enabled=true, tag=京东进店领豆
+cron "16 22 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_small_home.js, enabled=true, tag=京东东东小窝
 cron "8 0-23/3 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed.js, enabled=true, tag=京东天天加速
 cron "0 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_speed_sign.js, enabled=true, tag=京东极速版
-cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js, enabled=true, tag=东东超市
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, enabled=true, tag=赚京豆
+cron "11 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_superMarket.js, enabled=true, tag=京东东东超市
+cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_syj.js, enabled=true, tag=京东赚京豆
 cron "55 23 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_unsubscribe.js, enabled=true, tag=取关京东店铺商品
 cron "30 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xgyl.js, enabled=true, tag=小鸽有礼2
-cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js, enabled=true, tag=京喜签到
+cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jx_sign.js, enabled=true, tag=京东京喜签到
 cron "15 17 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/xmSports.js, enabled=true, tag=小米运动
 cron "15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/fqkk.js, enabled=true, tag=番茄看看（点击查看脚本阅读详细用法）
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_fanslove.js, enabled=true, tag=粉丝互动,
-cron "23 9,13,20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_mlyjy.js, enabled=true, tag=美丽研究院（不支持圈x仅作新增提示）,
+cron "23 9,13,20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_mlyjy.js, enabled=true, tag=京东美丽研究院,
 cron "*/10 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/sz.js, enabled=true, tag=闪挣
 cron "1 * * * *" script-path=https://raw.githubusercontent.com/age174/-/main/baosxq.js, enabled=true, tag=宝石星球(查看脚本有用法)
 cron "10 10,11 * * 2-5" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_entertainment.js, enabled=true, tag=百变大咖秀
@@ -129,7 +132,7 @@ cron "15 0 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/jq
 cron "15 10 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/mhdsp.js, enabled=true, tag=陌嗨短视频(查看脚本有用法)
 cron "10 10 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_products_detail.js, enabled=true, tag=京喜工厂商品列表详情
 cron "10 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd_tuan.js, enabled=true, tag=京东赚京东开团
-cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, enabled=true, tag=半自动领京豆
+cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, enabled=true, tag=京东半自动领京豆
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/didi.js, enabled=true, tag=滴滴出行
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/QQReadSign.js, enabled=true, tag=QQ阅读
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/DD-D1/2020scripts/master/hdhycSign.js, enabled=true, tag=海德汇一城
