--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,10 @@
 # 公众号少年歌行pro全网合一整理
-# 感谢所有脚本作者，目前脚本总数：319个
+# 感谢所有脚本作者，目前脚本总数：320个
 
+cron "10 1,12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js, enabled=true, tag=京东crazyJoy挂机（手机慎用）
+cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
+cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, enabled=true, tag=监控crazyJoy分红
+cron "10-20/5 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_live.js, enabled=true, tag=京东直播
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
 cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=京东美的家电节
 cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=京东众筹许愿池
@@ -83,8 +87,6 @@ cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresou
 cron "0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_car_exchange.js, enabled=true, tag=京东汽车兑换
 cron "2 0-23/4 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cash.js, enabled=true, tag=签到领现金
 cron "5 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_club_lottery.js, enabled=true, tag=摇京豆
-cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
-cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, enabled=true, tag=监控crazyJoy分红
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_daily_egg.js, enabled=true, tag=天天提鹅
 cron "10 * * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_dreamFactory.js, enabled=true, tag=京喜工厂
 cron "5 6-18/6 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_fruit.js, enabled=true, tag=东东农场
