--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,11 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, enabled=true, tag=领现金兑换红包
+cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=京东美的家电节
+cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
+cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=京东众筹许愿池
+cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live.js, enabled=true, tag=京东直播
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
 cron " 10 10 * * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/master/jd_xmf.js, enabled=true, tag=京东小魔方
