--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：320个
 
+cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, enabled=true, tag=京东手机尚学季
 cron "10 1,12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js, enabled=true, tag=京东crazyJoy挂机（手机慎用）
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
 cron "10 12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_bonus.js, enabled=true, tag=监控crazyJoy分红
@@ -58,7 +59,7 @@ cron "15 12,14,16,20,22 * * *" script-path=https://raw.githubusercontent.com/age
 cron "30 8,13,19 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_cfd.js, enabled=true, tag=京喜财富岛(改)
 cron "15 12,14,16,20 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/dka.js, enabled=true, tag=蛋咖
 cron "0 */10 * * * ?" script-path=https://pan.meitudou.cn/Task/QQread.js, enabled=true, tag=QQ阅读
-cron "0 0 * * *" script-path=https://raw.githubusercontent.com/shuye73/MyActions/main/jx_cfdtx.js, enabled=true, tag=京喜财富岛提现
+cron "0 0 * * *" script-path=https://raw.githubusercontent.com/wuzhi01/MyActions/main/jx_cfdtx.js, enabled=true, tag=京喜财富岛提现
 cron "30 6,12,22 * * *" script-path=https://raw.githubusercontent.com/moposmall/Script/main/Me/jx_cfd_exchange.js, enabled=true, tag=京喜财富岛兑换提醒
 cron "5,35 8-23 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/jrtt.js, enabled=true, tag=今日头条极速版
 cron "0 */30 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/hotsoon.js, enabled=true, tag=火山视频极速版
