--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,11 +2,11 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "0 0 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_xtg.js, enabled=true, tag=手机尚学季
 cron "0,1,2 0 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_exchange.js, enabled=true, tag=领现金兑换红包
-cron "15 10 10-31 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_unionPoster.js, enabled=true, tag=京东美的家电节
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=京东洗护发超级品类日
 cron "10 10,15 13-20 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_wish.js, enabled=true, tag=京东众筹许愿池
-cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live.js, enabled=true, tag=京东直播
+cron "10-20/5 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_live.js, enabled=true, tag=京东直播
 cron "5,35 9-22 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/wkzz.js, enabled=true, tag=微客众智
 cron "7 0-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/shuqi.js, enabled=true, tag=书旗小说
 cron " 10 10 * * *  " script-path=https://raw.githubusercontent.com/i-chenzhe/qx/master/jd_xmf.js, enabled=true, tag=京东小魔方
@@ -18,8 +18,8 @@ cron "20 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/x
 cron "13 8,10 8-15 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_superDay.js, enabled=true, tag=超级品类日
 cron "30,31 20-23/1 9,12 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_live_redrain.js, enabled=true, tag=超级直播间红包雨
 cron "15 7,15 * * *" script-path=https://raw.githubusercontent.com/ddgksf2013/Cuttlefish/master/Jd/jd_cash_reward.js, enabled=true, tag=领现金自动获得酬劳
-cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_global.js, enabled=true, tag=环球挑战赛
-cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxd.js, enabled=true, tag=京小兑
+cron "0 9 8-31 3 *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_global.js, enabled=true, tag=环球挑战赛
+cron "30 8 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_jxd.js, enabled=true, tag=京小兑
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/pyq.js, enabled=true, tag=评有圈
 cron "3 10 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_marketLottery.js, enabled=true, tag=京东超市-大转盘
 cron "50 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/yggy.js, enabled=true, tag=阳光果园
@@ -96,34 +96,34 @@ cron "0 9,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_jxnc
 cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_ms.js, enabled=true, tag=京东秒秒币
 cron "0 10 0 * * *" script-path=https://raw.githubusercontent.com/XidNDD/2020scripts/master/jddsSign.js, enabled=true, tag=京东读书签到
 cron "5 8 * * *" script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js, enabled=true, tag= 京东特权值
-cron "1 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_wechat_sign.js, enabled=true, tag=京东粉丝专享
-cron "30 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_gyec.js, enabled=true, tag=工业品爱消除
-cron "55 23 * * 6" script-path=https://qxzy.top/rules/QuantumultX/js/jd_unbind.js, enabled=true, tag=注销京东会员卡
+cron "1 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_wechat_sign.js, enabled=true, tag=京东粉丝专享
+cron "30 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_gyec.js, enabled=true, tag=工业品爱消除
+cron "55 23 * * 6" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_unbind.js, enabled=true, tag=注销京东会员卡
 cron "0 30 2 1,10,20 * ?" script-path=https://gitee.com/qq34347476/quantumult-x/raw/master/get_share_jd_code.js, enabled=true, tag=获取并提交hz码
-cron "1 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_family.js, enabled=true, tag=京东家庭号
-cron "0 2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_price.js, enabled=true, tag=京东保价
-cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_daily_egg.js, enabled=true, tag=天天提鹅
-cron "15 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_joy.js, enabled=true, tag=京东宠汪汪
-cron "15 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_joy_feedPets.js, enabled=true, tag=京东宠汪汪喂食
-cron "0 0 0,8,16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_joy_reward.js, enabled=true, tag=宠汪汪积分兑换奖品
-cron "15 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_joy_run.js, enabled=true, tag=宠汪汪邀请助力与赛跑助力
-cron "0 0-10/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_joy_steal.js, enabled=true, tag=宠汪汪偷好友积分与狗粮
-cron "12 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_pigPet.js, enabled=true, tag=京融养猪
-cron "5 6-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_fruit.js, tag=东东农场 
-cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_crazy_joy_coin.js, enabled=true, tag=crazyJoy挂机
-cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
-cron "10 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_crazy_joy_bonus.js, enabled=true, tag=监控crazyJoy分红
-cron "2 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_cash.js, enabled=true, tag=签到领现金
-cron "5 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jx_sign.js, enabled=true, tag=京喜签到
+cron "1 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_family.js, enabled=true, tag=京东家庭号
+cron "0 2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_price.js, enabled=true, tag=京东保价
+cron "10 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_daily_egg.js, enabled=true, tag=天天提鹅
+cron "15 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy.js, enabled=true, tag=京东宠汪汪
+cron "15 0-23/1 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy_feedPets.js, enabled=true, tag=京东宠汪汪喂食
+cron "0 0 0,8,16 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy_reward.js, enabled=true, tag=宠汪汪积分兑换奖品
+cron "15 10 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy_run.js, enabled=true, tag=宠汪汪邀请助力与赛跑助力
+cron "0 0-10/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_joy_steal.js, enabled=true, tag=宠汪汪偷好友积分与狗粮
+cron "12 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_pigPet.js, enabled=true, tag=京融养猪
+cron "5 6-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_fruit.js, tag=东东农场 
+cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_crazy_joy_coin.js, enabled=true, tag=crazyJoy挂机
+cron "10 7 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
+cron "10 12 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_crazy_joy_bonus.js, enabled=true, tag=监控crazyJoy分红
+cron "2 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_cash.js, enabled=true, tag=签到领现金
+cron "5 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jx_sign.js, enabled=true, tag=京喜签到
 cron "0/30 * * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_factory.js, enabled=true, tag=京喜工厂助力+自动开团参团
-cron "10 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_kd.js, enabled=true, tag=京东快递签到
-cron "15 6-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_pet.js, tag=东东萌宠
-cron "12 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_pigPet.js, enabled=true, tag=京东金融养猪猪
-cron "1 7-21/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_plantBean.js, tag=京东种豆得豆
-cron "1 8,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_bookshop.js, enabled=true, tag=口袋书店
-cron "8 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_speed.js, tag=京东天天加速
-cron "16 22 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_small_home.js, enabled=true, tag=东东小窝
-cron "3 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_moneyTree.js, tag=京东摇钱树
+cron "10 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_kd.js, enabled=true, tag=京东快递签到
+cron "15 6-18/6 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_pet.js, tag=东东萌宠
+cron "12 * * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_pigPet.js, enabled=true, tag=京东金融养猪猪
+cron "1 7-21/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_plantBean.js, tag=京东种豆得豆
+cron "1 8,12,18 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_bookshop.js, enabled=true, tag=口袋书店
+cron "8 0-23/3 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_speed.js, tag=京东天天加速
+cron "16 22 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_small_home.js, enabled=true, tag=东东小窝
+cron "3 0-23/2 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/lxk0301/jd_moneyTree.js, tag=京东摇钱树
 cron "5 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_club_lottery.js, tag=摇京豆
 cron "55 23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_unsubscribe.js, enabled=true, tag=取关京东店铺商品
 cron "10 0 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/jd_shop.js, tag=进店领豆 
