--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,6 +1,7 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：320个
 
+cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js, enabled=true, tag=快看点
 cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, enabled=true, tag=京东手机尚学季
 cron "10 1,12 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy_coin.js, enabled=true, tag=京东crazyJoy挂机（手机慎用）
 cron "10 7 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_crazy_joy.js, enabled=true, tag=crazyJoy任务
