--- a/task/qixin.conf
+++ b/task/qixin.conf
@@ -2,6 +2,7 @@
 # https://qxzy.top/rules/QuantumultX/qixin.conf
 
 cron "* * * * *" script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/box/switcher/box.switcher.js, enabled=true, tag=切换会话
+cron "*/20 8-23 * * *" script-path=https://raw.githubusercontent.com/6Svip120apk69/gitee_q8qsTAUA_cThxc1RBVUE/main/Task/iboxpay.js, enabled=true, tag=笑谱（ziye）
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=一加盲盒
 cron "5 8,14,20 17-25 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mother_jump.js, enabled=true, tag=母婴-跳一跳
 cron "12 15 15-29 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_lenovo.js, enabled=true, tag=联想集卡活动
@@ -41,7 +42,6 @@ cron "15 12 * * *" script-path=https://raw.githubusercontent.com/age174/-/main/y
 cron "30 18 * * *" script-path=https://raw.githubusercontent.com/whyour/hundun/master/quanx/jd_zjd.js, enabled=true, tag=半自动领京豆
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/58xinian/Surge/master/Script/huke.js, enabled=true, tag=虎课网
 cron "0 9 * * *" script-path=https://raw.githubusercontent.com/Sunert/Scripts/master/Task/jddj.js, enabled=true, tag=京东到家
-cron "*/20 8-23 * * *" script-path=https://qxzy.top/rules/QuantumultX/js/ZIYE/Task/iboxpay.js, enabled=true, tag=笑谱
 cron "3 20 * * *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/jd_shake.js, enabled=true, tag=摇一摇
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/wechatsubs/wechatsubs.js, enabled=true, tag=公众号监控
 cron "5 0 * * *" script-path=https://raw.githubusercontent.com/evilbutcher/Quantumult_X/master/check_in/klcw/klcw-app.js, enabled=true, tag=酷乐潮玩App
