--- a/task/AllinOne.conf
+++ b/task/AllinOne.conf
@@ -1,7 +1,9 @@
 # 公众号少年歌行pro全网合一整理
 # 感谢所有脚本作者，目前脚本总数：320个
 
-cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ygkc.js, enabled=true, 
+cron "5 1,6,11,16,21 * 3-4 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_super5g.js, enabled=true, tag=京东5G超级盲盒
+cron "5 10 * 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_mgold.js, enabled=true, tag=京东金口碑奖投票
+cron "0 7 * * *" script-path=https://raw.githubusercontent.com/sngxpro/QuanX/master/scripts/ygkc.js, enabled=true, tag=阳光矿场
 cron "11 12 17-30 3 *" script-path=https://raw.githubusercontent.com/i-chenzhe/qx/main/z_oneplus.js, enabled=true, tag=京东一加盲盒
 cron "*/20 * * * *" script-path=https://raw.githubusercontent.com/ZhiYi-N/Private-Script/master/Scripts/kkd.js, enabled=true, tag=快看点
 cron "0 0 0 * * *" script-path=https://jdsharedresourcescdn.azureedge.net/jdresource/jd_xtg.js, enabled=true, tag=京东手机尚学季
