--- a/.github/workflows/京东定时任务.yml
+++ b/.github/workflows/京东定时任务.yml
@@ -82,7 +82,8 @@ jobs:
         run: |
           cd ~/TaskAction
           node jd_cash.js
-
+        env:
+          JD_CASH_SHARECODES: ${{ secrets.JD_CASH_SHARECODES }}
 
       - name: '运行 【京东汽车】'
         run: |
